--- a/trunk/jsidplay2/src/main/resources/ui/oscilloscope/Oscilloscope.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/oscilloscope/Oscilloscope.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -15,125 +16,127 @@
 <?import ui.oscilloscope.VolumeGauge?>
 <?import ui.oscilloscope.WaveGauge?>
 <?scenebuilder-preview-i18n-resource Oscilloscope.properties?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ScrollPane?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<VBox AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10"
 		AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
-		<GridPane>
-			<Label text="%MONO_SID_" GridPane.columnIndex="0"
-				GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
-			<CheckBox fx:id="muteVoice1" onAction="#doMuteVoice1" text="%MUTE_VOICE_1"
-				GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
-			<CheckBox fx:id="muteVoice2" onAction="#doMuteVoice2" text="%MUTE_VOICE_2"
-				GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
-			<CheckBox fx:id="muteVoice3" onAction="#doMuteVoice3" text="%MUTE_VOICE_3"
-				GridPane.columnIndex="3" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
-			<Label text="%STEREO_SID_" GridPane.columnIndex="0"
-				GridPane.rowIndex="1" />
-			<CheckBox fx:id="muteVoice4" onAction="#doMuteVoice4" text="%MUTE_VOICE_1"
-				GridPane.columnIndex="1" GridPane.rowIndex="1" />
-			<CheckBox fx:id="muteVoice5" onAction="#doMuteVoice5" text="%MUTE_VOICE_2"
-				GridPane.columnIndex="2" GridPane.rowIndex="1" />
-			<CheckBox fx:id="muteVoice6" onAction="#doMuteVoice6" text="%MUTE_VOICE_3"
-				GridPane.columnIndex="3" GridPane.rowIndex="1" />
-			<Label text="%3SID_" GridPane.columnIndex="0"
-				GridPane.rowIndex="2" />
-			<CheckBox fx:id="muteVoice7" onAction="#doMuteVoice7" text="%MUTE_VOICE_1"
-				GridPane.columnIndex="1" GridPane.rowIndex="2" />
-			<CheckBox fx:id="muteVoice8" onAction="#doMuteVoice8" text="%MUTE_VOICE_2"
-				GridPane.columnIndex="2" GridPane.rowIndex="2" />
-			<CheckBox fx:id="muteVoice9" onAction="#doMuteVoice9" text="%MUTE_VOICE_3"
-				GridPane.columnIndex="3" GridPane.rowIndex="2" />
-		</GridPane>
-		<Separator orientation="HORIZONTAL" />
-		<HBox>
-			<TitledPane text="%MONO_SID" collapsible="false">
-				<GridPane>
-					<WaveGauge fx:id="waveMono_0" text="%WAVE"
-						GridPane.columnIndex="0" GridPane.rowIndex="0" />
-					<EnvelopeGauge fx:id="envMono_0" text="%ENVELOPE"
-						GridPane.columnIndex="1" GridPane.rowIndex="0" />
-					<FrequencyGauge fx:id="freqMono_0" text="%FREQUENCY"
-						GridPane.columnIndex="2" GridPane.rowIndex="0" />
-					<WaveGauge fx:id="waveMono_1" text="%WAVE" voice="1"
-						GridPane.columnIndex="0" GridPane.rowIndex="1" />
-					<EnvelopeGauge fx:id="envMono_1" text="%ENVELOPE"
-						voice="1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-					<FrequencyGauge fx:id="freqMono_1" text="%FREQUENCY"
-						voice="1" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-					<WaveGauge fx:id="waveMono_2" text="%WAVE" voice="2"
-						GridPane.columnIndex="0" GridPane.rowIndex="2" />
-					<EnvelopeGauge fx:id="envMono_2" text="%ENVELOPE"
-						voice="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-					<FrequencyGauge fx:id="freqMono_2" text="%FREQUENCY"
-						voice="2" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-					<VolumeGauge fx:id="volumeMono" text="%MASTER_VOLUME"
-						GridPane.columnIndex="0" GridPane.rowIndex="3" />
-					<ResonanceGauge fx:id="resonanceMono" text="%RESONANCE"
-						GridPane.columnIndex="1" GridPane.rowIndex="3" />
-					<FilterGauge fx:id="filterMono" text="%FILTER"
-						GridPane.columnIndex="2" GridPane.rowIndex="3" />
-				</GridPane>
-			</TitledPane>
-			<HBox HBox.hgrow="ALWAYS" />
-			<TitledPane text="%STEREO_SID" collapsible="false">
-				<GridPane>
-					<WaveGauge fx:id="waveStereo_0" text="%WAVE"
-						GridPane.columnIndex="0" GridPane.rowIndex="0" />
-					<EnvelopeGauge fx:id="envStereo_0" text="%ENVELOPE"
-						GridPane.columnIndex="1" GridPane.rowIndex="0" />
-					<FrequencyGauge fx:id="freqStereo_0" text="%FREQUENCY"
-						GridPane.columnIndex="2" GridPane.rowIndex="0" />
-					<WaveGauge fx:id="waveStereo_1" text="%WAVE" voice="1"
-						GridPane.columnIndex="0" GridPane.rowIndex="1" />
-					<EnvelopeGauge fx:id="envStereo_1" text="%ENVELOPE"
-						voice="1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-					<FrequencyGauge fx:id="freqStereo_1" text="%FREQUENCY"
-						voice="1" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-					<WaveGauge fx:id="waveStereo_2" text="%WAVE" voice="2"
-						GridPane.columnIndex="0" GridPane.rowIndex="2" />
-					<EnvelopeGauge fx:id="envStereo_2" text="%ENVELOPE"
-						voice="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-					<FrequencyGauge fx:id="freqStereo_2" text="%FREQUENCY"
-						voice="2" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-					<VolumeGauge fx:id="volumeStereo" text="%MASTER_VOLUME"
-						GridPane.columnIndex="0" GridPane.rowIndex="3" />
-					<ResonanceGauge fx:id="resonanceStereo" text="%RESONANCE"
-						GridPane.columnIndex="1" GridPane.rowIndex="3" />
-					<FilterGauge fx:id="filterStereo" text="%FILTER"
-						GridPane.columnIndex="2" GridPane.rowIndex="3" />
-				</GridPane>
-			</TitledPane>
-			<HBox HBox.hgrow="ALWAYS" />
-			<TitledPane text="%3SID" collapsible="false">
-				<GridPane>
-					<WaveGauge fx:id="wave3Sid_0" text="%WAVE"
-						GridPane.columnIndex="0" GridPane.rowIndex="0" />
-					<EnvelopeGauge fx:id="env3Sid_0" text="%ENVELOPE"
-						GridPane.columnIndex="1" GridPane.rowIndex="0" />
-					<FrequencyGauge fx:id="freq3Sid_0" text="%FREQUENCY"
-						GridPane.columnIndex="2" GridPane.rowIndex="0" />
-					<WaveGauge fx:id="wave3Sid_1" text="%WAVE" voice="1"
-						GridPane.columnIndex="0" GridPane.rowIndex="1" />
-					<EnvelopeGauge fx:id="env3Sid_1" text="%ENVELOPE"
-						voice="1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-					<FrequencyGauge fx:id="freq3Sid_1" text="%FREQUENCY"
-						voice="1" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-					<WaveGauge fx:id="wave3Sid_2" text="%WAVE" voice="2"
-						GridPane.columnIndex="0" GridPane.rowIndex="2" />
-					<EnvelopeGauge fx:id="env3Sid_2" text="%ENVELOPE"
-						voice="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-					<FrequencyGauge fx:id="freq3Sid_2" text="%FREQUENCY"
-						voice="2" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-					<VolumeGauge fx:id="volume3Sid" text="%MASTER_VOLUME"
-						GridPane.columnIndex="0" GridPane.rowIndex="3" />
-					<ResonanceGauge fx:id="resonance3Sid" text="%RESONANCE"
-						GridPane.columnIndex="1" GridPane.rowIndex="3" />
-					<FilterGauge fx:id="filter3Sid" text="%FILTER"
-						GridPane.columnIndex="2" GridPane.rowIndex="3" />
-				</GridPane>
-			</TitledPane>
-		</HBox>
+		<ScrollPane>
+			<GridPane>
+				<Label text="%MONO_SID_" GridPane.columnIndex="0"
+					GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
+				<CheckBox fx:id="muteVoice1" onAction="#doMuteVoice1" text="%MUTE_VOICE_1"
+					GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
+				<CheckBox fx:id="muteVoice2" onAction="#doMuteVoice2" text="%MUTE_VOICE_2"
+					GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
+				<CheckBox fx:id="muteVoice3" onAction="#doMuteVoice3" text="%MUTE_VOICE_3"
+					GridPane.columnIndex="3" GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" />
+				<Label text="%STEREO_SID_" GridPane.columnIndex="0"
+					GridPane.rowIndex="1" />
+				<CheckBox fx:id="muteVoice4" onAction="#doMuteVoice4" text="%MUTE_VOICE_1"
+					GridPane.columnIndex="1" GridPane.rowIndex="1" />
+				<CheckBox fx:id="muteVoice5" onAction="#doMuteVoice5" text="%MUTE_VOICE_2"
+					GridPane.columnIndex="2" GridPane.rowIndex="1" />
+				<CheckBox fx:id="muteVoice6" onAction="#doMuteVoice6" text="%MUTE_VOICE_3"
+					GridPane.columnIndex="3" GridPane.rowIndex="1" />
+				<Label text="%3SID_" GridPane.columnIndex="0"
+					GridPane.rowIndex="2" />
+				<CheckBox fx:id="muteVoice7" onAction="#doMuteVoice7" text="%MUTE_VOICE_1"
+					GridPane.columnIndex="1" GridPane.rowIndex="2" />
+				<CheckBox fx:id="muteVoice8" onAction="#doMuteVoice8" text="%MUTE_VOICE_2"
+					GridPane.columnIndex="2" GridPane.rowIndex="2" />
+				<CheckBox fx:id="muteVoice9" onAction="#doMuteVoice9" text="%MUTE_VOICE_3"
+					GridPane.columnIndex="3" GridPane.rowIndex="2" />
+			</GridPane>
+			<Separator orientation="HORIZONTAL" />
+			<HBox>
+				<TitledPane text="%MONO_SID" collapsible="false">
+					<GridPane>
+						<WaveGauge fx:id="waveMono_0" text="%WAVE"
+							GridPane.columnIndex="0" GridPane.rowIndex="0" />
+						<EnvelopeGauge fx:id="envMono_0" text="%ENVELOPE"
+							GridPane.columnIndex="1" GridPane.rowIndex="0" />
+						<FrequencyGauge fx:id="freqMono_0" text="%FREQUENCY"
+							GridPane.columnIndex="2" GridPane.rowIndex="0" />
+						<WaveGauge fx:id="waveMono_1" text="%WAVE" voice="1"
+							GridPane.columnIndex="0" GridPane.rowIndex="1" />
+						<EnvelopeGauge fx:id="envMono_1" text="%ENVELOPE"
+							voice="1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+						<FrequencyGauge fx:id="freqMono_1" text="%FREQUENCY"
+							voice="1" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+						<WaveGauge fx:id="waveMono_2" text="%WAVE" voice="2"
+							GridPane.columnIndex="0" GridPane.rowIndex="2" />
+						<EnvelopeGauge fx:id="envMono_2" text="%ENVELOPE"
+							voice="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+						<FrequencyGauge fx:id="freqMono_2" text="%FREQUENCY"
+							voice="2" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+						<VolumeGauge fx:id="volumeMono" text="%MASTER_VOLUME"
+							GridPane.columnIndex="0" GridPane.rowIndex="3" />
+						<ResonanceGauge fx:id="resonanceMono" text="%RESONANCE"
+							GridPane.columnIndex="1" GridPane.rowIndex="3" />
+						<FilterGauge fx:id="filterMono" text="%FILTER"
+							GridPane.columnIndex="2" GridPane.rowIndex="3" />
+					</GridPane>
+				</TitledPane>
+				<HBox HBox.hgrow="ALWAYS" />
+				<TitledPane text="%STEREO_SID" collapsible="false">
+					<GridPane>
+						<WaveGauge fx:id="waveStereo_0" text="%WAVE"
+							GridPane.columnIndex="0" GridPane.rowIndex="0" />
+						<EnvelopeGauge fx:id="envStereo_0" text="%ENVELOPE"
+							GridPane.columnIndex="1" GridPane.rowIndex="0" />
+						<FrequencyGauge fx:id="freqStereo_0" text="%FREQUENCY"
+							GridPane.columnIndex="2" GridPane.rowIndex="0" />
+						<WaveGauge fx:id="waveStereo_1" text="%WAVE" voice="1"
+							GridPane.columnIndex="0" GridPane.rowIndex="1" />
+						<EnvelopeGauge fx:id="envStereo_1" text="%ENVELOPE"
+							voice="1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+						<FrequencyGauge fx:id="freqStereo_1" text="%FREQUENCY"
+							voice="1" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+						<WaveGauge fx:id="waveStereo_2" text="%WAVE" voice="2"
+							GridPane.columnIndex="0" GridPane.rowIndex="2" />
+						<EnvelopeGauge fx:id="envStereo_2" text="%ENVELOPE"
+							voice="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+						<FrequencyGauge fx:id="freqStereo_2" text="%FREQUENCY"
+							voice="2" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+						<VolumeGauge fx:id="volumeStereo" text="%MASTER_VOLUME"
+							GridPane.columnIndex="0" GridPane.rowIndex="3" />
+						<ResonanceGauge fx:id="resonanceStereo" text="%RESONANCE"
+							GridPane.columnIndex="1" GridPane.rowIndex="3" />
+						<FilterGauge fx:id="filterStereo" text="%FILTER"
+							GridPane.columnIndex="2" GridPane.rowIndex="3" />
+					</GridPane>
+				</TitledPane>
+				<HBox HBox.hgrow="ALWAYS" />
+				<TitledPane text="%3SID" collapsible="false">
+					<GridPane>
+						<WaveGauge fx:id="wave3Sid_0" text="%WAVE"
+							GridPane.columnIndex="0" GridPane.rowIndex="0" />
+						<EnvelopeGauge fx:id="env3Sid_0" text="%ENVELOPE"
+							GridPane.columnIndex="1" GridPane.rowIndex="0" />
+						<FrequencyGauge fx:id="freq3Sid_0" text="%FREQUENCY"
+							GridPane.columnIndex="2" GridPane.rowIndex="0" />
+						<WaveGauge fx:id="wave3Sid_1" text="%WAVE" voice="1"
+							GridPane.columnIndex="0" GridPane.rowIndex="1" />
+						<EnvelopeGauge fx:id="env3Sid_1" text="%ENVELOPE"
+							voice="1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+						<FrequencyGauge fx:id="freq3Sid_1" text="%FREQUENCY"
+							voice="1" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+						<WaveGauge fx:id="wave3Sid_2" text="%WAVE" voice="2"
+							GridPane.columnIndex="0" GridPane.rowIndex="2" />
+						<EnvelopeGauge fx:id="env3Sid_2" text="%ENVELOPE"
+							voice="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+						<FrequencyGauge fx:id="freq3Sid_2" text="%FREQUENCY"
+							voice="2" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+						<VolumeGauge fx:id="volume3Sid" text="%MASTER_VOLUME"
+							GridPane.columnIndex="0" GridPane.rowIndex="3" />
+						<ResonanceGauge fx:id="resonance3Sid" text="%RESONANCE"
+							GridPane.columnIndex="1" GridPane.rowIndex="3" />
+						<FilterGauge fx:id="filter3Sid" text="%FILTER"
+							GridPane.columnIndex="2" GridPane.rowIndex="3" />
+					</GridPane>
+				</TitledPane>
+			</HBox>
+		</ScrollPane>
 	</VBox>
 </AnchorPane>
