--- a/jsidplay2app/res/layout/activity_main.xml
+++ b/jsidplay2app/res/layout/activity_main.xml
@@ -313,6 +313,25 @@
                     android:layout_height="wrap_content" >
 
                     <TextView
+                        android:id="@+id/editText3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/bufferSize" />
+
+                    <EditText
+                        android:id="@+id/bufferSize"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:inputType="numberDecimal" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
                         android:id="@+id/editText2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -502,6 +521,7 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
             </LinearLayout>
+
         </FrameLayout>
 
     </LinearLayout>
