balance slider range changed, slightly better decorated

--- a/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.fxml
+++ b/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.fxml
@@ -32,32 +32,35 @@
 		<VBox>
 			<TitledPane text="%VOLUME_CONTROL">
 				<GridPane gridLinesVisible="true">
-					<VBox GridPane.columnIndex="0" GridPane.rowIndex="0" alignment="TOP_CENTER"
-						GridPane.hgrow="ALWAYS">
+					<VBox GridPane.columnIndex="0" GridPane.rowIndex="0"
+						alignment="TOP_CENTER" GridPane.hgrow="ALWAYS">
 						<Label text="%MAIN_SID_LEVEL" />
-						<Slider fx:id="mainVolume" min="0" max="12" value="12"
+						<Slider fx:id="mainVolume" min="0" max="12" value="6"
 							blockIncrement="1" majorTickUnit="0.1" />
 						<Label text="%MAIN_BALANCE" />
-						<Slider fx:id="mainBalance" min="0" max="1" value="0"
-							blockIncrement="0.1" />
+						<Slider fx:id="mainBalance" min="-5" max="5" value="-5"
+							minorTickCount="0" snapToTicks="true" blockIncrement="1"
+							majorTickUnit="1" showTickLabels="true" showTickMarks="true" />
 					</VBox>
 					<VBox GridPane.columnIndex="1" GridPane.rowIndex="0"
 						alignment="TOP_CENTER" GridPane.hgrow="ALWAYS">
 						<Label text="%SECOND_SID_LEVEL" />
-						<Slider fx:id="secondVolume" min="0" max="12" value="12"
+						<Slider fx:id="secondVolume" min="0" max="12" value="6"
 							blockIncrement="1" />
 						<Label text="%SECOND_BALANCE" />
-						<Slider fx:id="secondBalance" min="0" max="1" value="1"
-							blockIncrement="0.1" />
+						<Slider fx:id="secondBalance" min="-5" max="5" value="5"
+							minorTickCount="0" snapToTicks="true" blockIncrement="1"
+							majorTickUnit="1" showTickLabels="true" showTickMarks="true" />
 					</VBox>
 					<VBox GridPane.columnIndex="2" GridPane.rowIndex="0"
 						alignment="TOP_CENTER" GridPane.hgrow="ALWAYS">
 						<Label text="%THIRD_SID_LEVEL" />
-						<Slider fx:id="thirdVolume" min="0" max="12" value="12"
+						<Slider fx:id="thirdVolume" min="0" max="12" value="6"
 							blockIncrement="1" />
 						<Label text="%THIRD_BALANCE" />
-						<Slider fx:id="thirdBalance" min="0" max="1" value="1"
-							blockIncrement="0.1" />
+						<Slider fx:id="thirdBalance" min="-5" max="5" value="0"
+							minorTickCount="0" snapToTicks="true" blockIncrement="1"
+							majorTickUnit="1" showTickLabels="true" showTickMarks="true" />
 					</VBox>
 				</GridPane>
 			</TitledPane>
