--- a/trunk/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.fxml
@@ -94,7 +94,7 @@
 				</VBox>
 			</TitledPane>
 			<TitledPane text="%FILTER">
-				<GridPane>
+				<GridPane gridLinesVisible="true">
 					<BorderPane GridPane.columnIndex="0">
 						<top>
 							<VBox>
