Added option in the Settings dialog to allow external IP connections. If this option is turned on, clients can connect to localhost/127.0.0.1 when they run on the same machine, or they can connect to the IP address of the machine on the same machine or on machines in the network. When the option is turned on/off, all client connections will be closed to apply the change.

--- a/jsidplay2/src/main/resources/netsiddev/Settings.fxml
+++ b/jsidplay2/src/main/resources/netsiddev/Settings.fxml
@@ -27,6 +27,16 @@
 			</HBox>
 		</TitledPane>
 		
+		<TitledPane text="%CONNECTION_SETTINGS" collapsible="false" focusTraversable="false">
+			<padding>
+				<Insets top="0" right="0" left="0" bottom="10"/>                 
+            </padding>
+			<HBox spacing="10" alignment="CENTER_LEFT">
+				<Label text="%ALLOW_EXTERNAL_CONNECTIONS" />
+				<CheckBox fx:id="allowExternalConnections" onAction="#setAllowExternalConnections" />
+			</HBox>
+		</TitledPane>
+		
 		<TitledPane text="%EMULATION_SETTINGS" collapsible="false" focusTraversable="false">
 			<HBox spacing="10" alignment="CENTER_LEFT">
 				<Label text="%DIGI_BOOST" />
